updating to V3
Signed-off-by: Wayan Mastra <yanmastra61@gmail.com>