@@ -3,6 +3,7 @@ package io.yanmastra.quarkus.microservices.common.utils;
 import io.quarkus.arc.Unremovable;
 import jakarta.inject.Singleton;
 
+import java.util.Date;
 import java.util.List;
 import java.util.Map;
 
@@ -16,11 +17,21 @@ public class ParamToQueryEquals extends ParamToQuery {
 
     @Override
     public String getWhereClause(String key, List<String> value, String alias) {
-        return alias + key + "=:" + getSKey(key);
+        Object oValue = getRealValue(value.getFirst());
+        String sKey = key;
+        if (oValue instanceof String) {
+            sKey = "cast(" + key + " as string)";
+        } else if (oValue instanceof Date) {
+            sKey = "cast(" + key + " as date)";
+        }
+        return alias + sKey + "=:" + getSKey(key);
     }
 
     @Override
     public Map<String, Object> getFieldAndParams(String key, List<String> value, String alias) {
-        return Map.of(getSKey(key), value.get(0));
+        String sValue = value.getFirst();
+        Object oValue = getRealValue(sValue);
+        return Map.of(getSKey(key), oValue);
     }
+
 }
